<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".segunda_pantalla">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/V_usu" />

        <TextView
            android:id="@+id/R_usu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/R_usu" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:text="@string/V_contra" />

        <TextView
            android:id="@+id/R_contra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/R_contra" />



    </LinearLayout>
</LinearLayout>